--- a/src/index.html
+++ b/src/index.html
@@ -13,14 +13,13 @@
 <header class="header">
     <a href="#" class="logo">Maheshi</a>
 
-    <i class="fa-solid fa-bars" class="menu-icon"></i>
+    <i class="fa-solid fa-bars" id="menu-icon"></i>
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#services">Services</a>
         <a href="#skills">Skills</a>
         <a href="#education">Education</a>
-        <a href="#experience">Experience</a>
         <a href="#contact">Contact</a>
     </nav>
 </header>
@@ -105,13 +104,185 @@
         <div class="row" id="skillsContainer">
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma.png" alt="">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
+                    <span>Figma</span>
+                </div>
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/figma1.png" alt="">
                     <span>Figma</span>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+<section class="education" id="education">
+    <h2 class="heading">My <span>Education</span></h2>
+    <div class="timeline">
+        <div class="container right">
+            <div class="content">
+                <div class="tag">
+                    <h2>University</h2>
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
+                        impedit libero minima minus nam quia veritatis.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <div class="tag">
+                    <h2>University</h2>
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
+                        impedit libero minima minus nam quia veritatis.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <div class="tag">
+                    <h2>University</h2>
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
+                        impedit libero minima minus nam quia veritatis.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <div class="tag">
+                    <h2>University</h2>
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
+                        impedit libero minima minus nam quia veritatis.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <div class="tag">
+                    <h2>University</h2>
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
+                        impedit libero minima minus nam quia veritatis.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container left">
+            <div class="content">
+                <div class="tag">
+                    <h2>University</h2>
+                </div>
+                <div class="desc">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
+                        impedit libero minima minus nam quia veritatis.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me</span></h2>
+    <form action="">
+        <div class="input-box">
+            <input type="text" name="name" placeholder="Name" required>
+            <input type="email" placeholder="Email" required>
+            <input type="number" placeholder="Mobile Number" required>
+            <input type="text" placeholder="Subject" required>
+        </div>
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+        <input type="submit" value="Send Message" class="btn">
+    </form>
+</section>
+
+<footer class="footer">
+    <div class="social">
+        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        <a href=""><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
+    <ul class="list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Service</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
+    <p class="copyright">
+        @Maheshi | All Right Reserved
+    </p>
+</footer>
 
 
 </body>
