--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,13 @@
 </head>
 <body>
 <header class="header">
-    <a href="#" class="logo">Maheshi</a>
+    <a href="#" class="logo"><span>M</span>aheshi</a>
 
     <i class="fa-solid fa-bars" id="menu-icon"></i>
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
+        <a href="#portfolio" class="active">Project</a>
         <a href="#services">Services</a>
         <a href="#skills">Skills</a>
         <a href="#education">Education</a>
@@ -26,149 +27,186 @@
 
 <section class="home" id="home">
     <div class="home-img">
-        <img src="image/image4.jpg" alt="">
+        <img src="image/Group%201.png" alt="">
     </div>
     <div class="home-content">
         <h1>Hi, I'm <span>Maheshi</span></h1>
         <h3 class="typing-text">I'm a <span></span></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut consequuntur dolores doloribus
-            dolorum et fugit illum impedit maiores, molestiae molestias nihil nisi nostrum quos ut voluptas! Aliquam
-            assumenda beatae esse pariatur provident! Officiis quas quod repellat. Facere, fugiat!</p>
+        <p>I like to try different things with my creativity and ability. I have social skills including
+            listening,
+            respecting personal space, leadership skills, cooperation, empathy and using manners. Also,
+            I’m hard worker and fast learner. And also I'm very fond of web development, UI designing
+            and developing. My passion is make great things.</p>
         <div class="social-icon">
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/maheshi-de-silva-9b8787264/"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/MaheshiDSilva"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.behance.net/sachintmaheshi"><i class="fa-brands fa-square-behance"></i></a>
             <a href=""><i class="fa-brands fa-instagram"></i></a>
             <a href=""><i class="fa-brands fa-whatsapp"></i></a>
         </div>
-        <a href="#" class="btn">Hire Me</a>
+        <a href="image/Maheshi%20De%20Silva%20-%20CV.pdf" class="btn">Download CV</a>
+    </div>
+</section>
+
+<section class="portfolio" id="portfolio">
+    <h2 class="heading">My <span>Project</span></h2>
+
+    <div class="portfolio-container">
+        <div class="portfolio-box">
+            <img src="image/3.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>This is a clothing brand website created using Figma</p>
+                <a href="https://www.behance.net/sachintmaheshi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="portfolio-box">
+            <img src="image/4.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Web Design</h4>
+                <p>This is a furniture selling website created using Figma</p>
+                <a href="https://www.behance.net/sachintmaheshi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="portfolio-box">
+            <img src="image/mag%201.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Magazine Cover Page</h4>
+                <p>This is a magazine cover page created using Figma</p>
+                <a href="https://www.behance.net/sachintmaheshi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="portfolio-box">
+            <img src="image/5.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Mobile App Design</h4>
+                <p>This is a food ordering mobile app created using Figma</p>
+                <a href="https://www.behance.net/sachintmaheshi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="portfolio-box">
+            <img src="image/6.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Magazine Cover Page</h4>
+                <p>This is a magazine cover page created using Figma</p>
+                <a href="https://www.behance.net/sachintmaheshi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
+
+        <div class="portfolio-box">
+            <img src="image/7.jpg" alt="">
+            <div class="portfolio-layer">
+                <h4>Landing Page</h4>
+                <p>This is a beverage brand landing page created using Figma</p>
+                <a href="https://www.behance.net/sachintmaheshi"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+        </div>
     </div>
 </section>
 
 <section class="services" id="services">
-    <h2 class="heading">Services</h2>
+    <h2 class="heading">What<span> Can I Do</span></h2>
 
     <div class="services-container">
     <div class="service-box">
         <div class="service-info">
-            <h4>UI/UX Designer</h4>
-            <p>I'm a UI/UX Designer.Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum deleniti dolorem iste laborum magnam natus
-                perspiciatis possimus quae voluptatum?</p>
+            <h4>UI/UX Design</h4>
+            <i class="fa-regular fa-pen-to-square"></i>
+            <p>I am a UI/UX designer. I can do wireframing, prototyping, mockups creating using software like Figma,
+                Photoshop, Illustrator.</p>
         </div>
     </div>
 
         <div class="service-box">
             <div class="service-info">
-                <h4>Web developer</h4>
-                <p>I'm a web developer.Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum deleniti dolorem iste laborum magnam natus
-                    perspiciatis possimus quae voluptatum?</p>
+                <h4>Web Development</h4>
+                <i class="fa-solid fa-code"></i>
+                <p>I am a web developer. I can create amazing websites using technologies HTML, CSS, JavaScript, Bootstrap,
+                    Tailwind CSS, etc.</p>
             </div>
         </div>
 
         <div class="service-box">
             <div class="service-info">
-                <h4>Software Engineer</h4>
-                <p>I'm a Software Engineer. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum deleniti dolorem iste laborum magnam natus
-                    perspiciatis possimus quae voluptatum?</p>
+                <h4>Frontend Development</h4>
+                <i class="fa-solid fa-laptop-code"></i>
+                <p>I am a front-end developer. I can create amazing websites and apps using technologies React, NextJS,
+                    JQuery, JSON, Tailwind CSS,etc.</p>
             </div>
         </div>
 
-        <div class="service-box">
-            <div class="service-info">
-                <h4>Software Engineer</h4>
-                <p>I'm a Software Engineer. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum deleniti dolorem iste laborum magnam natus
-                    perspiciatis possimus quae voluptatum?</p>
-            </div>
-        </div>
-
-        <div class="service-box">
-            <div class="service-info">
-                <h4>Software Engineer</h4>
-                <p>I'm a Software Engineer. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum deleniti dolorem iste laborum magnam natus
-                    perspiciatis possimus quae voluptatum?</p>
-            </div>
-        </div>
-
-        <div class="service-box">
-            <div class="service-info">
-                <h4>Software Engineer</h4>
-                <p>I'm a Software Engineer. Lorem ipsum dolor sit amet, consectetur adipisicing elit. A cum deleniti dolorem iste laborum magnam natus
-                    perspiciatis possimus quae voluptatum?</p>
-            </div>
-        </div>
     </div>
 </section>
 
 <section class="skills" id="skills">
-    <h2 class="heading">Skills</h2>
+    <h2 class="heading">What<span> I Can</span></h2>
     <div class="container">
         <div class="row" id="skillsContainer">
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
+                    <img src="image/figma-removebg-preview.png" style="padding-top: 3rem" alt="">
                     <span>Figma</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/photoshop-removebg-preview.png" alt="">
+                    <span>Photoshop</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/tailwind-removebg-preview.png" style="padding-top: 5rem" alt="">
+                    <span>Tailwind CSS</span>
+                </div>
+
+            </div>
+
+            <div class="bar">
+                <div class="info">
+                    <img src="image/css-removebg-preview.png" alt="">
+                    <span>CSS</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/html-removebg-preview.png" alt="">
+                    <span>HTML</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/js-removebg-preview.png" alt="">
+                    <span>JavaScript</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/java-removebg-preview.png" alt="">
+                    <span>Java</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/bootstrap-removebg-preview.png" alt="">
+                    <span>Bootstrap</span>
                 </div>
             </div>
 
             <div class="bar">
                 <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
-                </div>
-            </div>
-
-            <div class="bar">
-                <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
-                </div>
-            </div>
-
-            <div class="bar">
-                <div class="info">
-                    <img src="image/figma1.png" alt="">
-                    <span>Figma</span>
+                    <img src="image/react-removebg-preview.png" alt="">
+                    <span>React</span>
                 </div>
             </div>
         </div>
@@ -178,26 +216,13 @@
 <section class="education" id="education">
     <h2 class="heading">My <span>Education</span></h2>
     <div class="timeline">
-        <div class="container right">
-            <div class="content">
-                <div class="tag">
-                    <h2>University</h2>
-                </div>
-                <div class="desc">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
-                        impedit libero minima minus nam quia veritatis.</p>
-                </div>
-            </div>
-        </div>
-
         <div class="container left">
             <div class="content">
                 <div class="tag">
-                    <h2>University</h2>
+                    <h2>G/Dharmarama Primary School</h2>
                 </div>
                 <div class="desc">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
-                        impedit libero minima minus nam quia veritatis.</p>
+                    <p>2005-2009</p>
                 </div>
             </div>
         </div>
@@ -205,11 +230,10 @@
         <div class="container right">
             <div class="content">
                 <div class="tag">
-                    <h2>University</h2>
+                    <h2>G/Shariputhra Maha Vidyalaya</h2>
                 </div>
                 <div class="desc">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
-                        impedit libero minima minus nam quia veritatis.</p>
+                    <p>2010-2015</p>
                 </div>
             </div>
         </div>
@@ -217,11 +241,10 @@
         <div class="container left">
             <div class="content">
                 <div class="tag">
-                    <h2>University</h2>
+                    <h2>G/Anuladevi Balika Vidyalaya</h2>
                 </div>
                 <div class="desc">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
-                        impedit libero minima minus nam quia veritatis.</p>
+                    <p>2016-2018</p>
                 </div>
             </div>
         </div>
@@ -229,11 +252,10 @@
         <div class="container right">
             <div class="content">
                 <div class="tag">
-                    <h2>University</h2>
+                    <h2>Esoft Metro Campus</h2>
                 </div>
                 <div class="desc">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
-                        impedit libero minima minus nam quia veritatis.</p>
+                    <p>2019-2020</p>
                 </div>
             </div>
         </div>
@@ -241,11 +263,21 @@
         <div class="container left">
             <div class="content">
                 <div class="tag">
-                    <h2>University</h2>
+                    <h2>Beeline English Academy</h2>
                 </div>
                 <div class="desc">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequatur earum est facilis,
-                        impedit libero minima minus nam quia veritatis.</p>
+                    <p>2019-2020</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container right">
+            <div class="content">
+                <div class="tag">
+                    <h2>Institute of Software Engineering</h2>
+                </div>
+                <div class="desc">
+                    <p>2020</p>
                 </div>
             </div>
         </div>
@@ -268,16 +300,17 @@
 
 <footer class="footer">
     <div class="social">
-        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-        <a href=""><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/maheshi-de-silva-9b8787264/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://github.com/MaheshiDSilva"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.behance.net/sachintmaheshi"><i class="fa-brands fa-square-behance"></i></a>
         <a href=""><i class="fa-brands fa-instagram"></i></a>
         <a href=""><i class="fa-brands fa-whatsapp"></i></a>
     </div>
     <ul class="list">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Service</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#portfolio">Projects</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
     <p class="copyright">
         @Maheshi | All Right Reserved
