--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="service-info">
                 <h4>Frontend Development</h4>
                 <i class="fa-solid fa-laptop-code"></i>
-                <p>I am a front-end developer. I can create amazing websites and apps using technologies React, NextJS,
+                <p>I am a front-end developer. I can create amazing websites and apps using technologies React, Next.js,
                     JQuery, JSON, Tailwind CSS,etc.</p>
             </div>
         </div>
